# EVTools

./: .gitignore  IBM_utility_error_comparison.ipynb  README.md  depolarizing_heatmap.ipynb  process_results_2_cell.ipynb  process_results_4_cell.ipynb  process_results_p0.ipynb  process_volumetric_benchmark.ipynb  pyproject.toml
data/EVCDR/0/: TNS.json  exact_evolution.json  ibm_brisbane_submission_1.json  ibm_brisbane_submission_2.json  ibm_cusco_submission.json  ibm_nazca_submission.json  ibm_sherbrooke_submission_1.json
data/EVCDR/1/: TNS_10_steps.json  TNS_30_steps.json  exact_evolution_21_q.json  ibm_sherbrooke_submission_1.json  ibm_sherbrooke_submission_2.json  ibm_sherbrooke_submission_3.json
data/EVCDR/2/: TNS_15_steps.json  TNS_50_steps.json  exact_evolution_35_q.json  ibm_sherbrooke_submission_1.json  ibm_sherbrooke_submission_2.json  ibm_sherbrooke_submission_3.json
data/IBM_evidence_comparison/: EVCDR_data_compiled.json  IBM_data_compiled.json
data/volumetric_benchmark/: bit_flip_probs.json  volumetric_job_dict.json
data/volumetric_benchmark/10/: measurement_data_10_1.txt  measurement_data_10_128.txt  measurement_data_10_16.txt  measurement_data_10_2.txt  measurement_data_10_256.txt  measurement_data_10_32.txt  measurement_data_10_4.txt  measurement_data_10_64.txt  measurement_data_10_8.txt
data/volumetric_benchmark/12/: measurement_data_12_1.txt  measurement_data_12_2.txt  (+7 more)
evtools/models/: depolarizing.py
evtools/sim_tools/: circuit_executor.py  embed_cluster_circuits.py  ising_evolution.py  process_evcdr.py  process_evcdr_multiple.py  utils.py
(+60 files in other folders)
